--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,22 @@
 .mapTopBack .mapWrap{position: absolute;left: calc(50vw + 0px);top: 0;width: 100%;max-width: 390px;height: 360px;}
 .mapTopBack + .mapFront{position: relative;margin-top: 290px;z-index: 1;}
 
+/* text */
+.titleSm{display: block;text-align: center;}
+.titleSm p{display: inline-block;padding: 4px 12px;border-radius: 20px;box-sizing: border-box;font-size: 14px;color: #fff;font-weight: 700;line-height: 18px;text-align: center;letter-spacing: -0.6px;}
+.titleSm span{color: #F8ED16;}
+.titleLg{text-align: center;margin-top: 15px;}
+.titleLg:after{content: "";display: block;width: 60px;height: 1px;margin: 15px auto;background-color: #000;}
+.textMd{font-size: 16px;color: #666666;font-weight: 400;line-height: 24px;text-align: center;letter-spacing: -0.6px;word-break: keep-all;}
+.textMd span{color: #383838;font-weight: 500;text-decoration: underline;}
+.rouletterInfo .titleSm p{position: absolute;top: -13px;left: 50%;transform: translate(-50%, 0%);min-width: 160px;background-color: #685DFF;font-size: 15px;font-weight: 900;}
+.rouletterSlideWrap .titleSm p{background-color: #685DFF;}
+.ticketWrap .titleSm p{background-color: #63BDBD;}
+.ticketSlideWrap .titleLg:after{display: none;}
+.stampWrap .titleSm p{background-color: #FF0097;}
+.stampWrap .titleLg:after{margin: 22px auto;}
+
+/* store */
 .storeList{position: relative;padding: 40px 16px 20px;background: #fff;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;display: flex;flex-direction: row;flex-wrap: wrap;align-items: flex-start;justify-content: space-between;}
 .storeList:before{content: "";display: block;position: absolute;top: 15px;left: 50%; transform: translate(-50%, 0%);width: 100px;height: 5px;background: #E0E0E0;border-radius: 15px;}
 .storeList .storeItem{width: calc(50% - 5px);padding: 10px 12px 11px;margin-top: 10px;background: #fff;border: 1px solid #E1E1E1;box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);border-radius: 10px;box-sizing: border-box;text-align: center;transition: .3s;-webkit-transition: .3s;}
@@ -30,16 +46,88 @@
 .storeList .storeItem.on{background: #FF0097;}
 .storeList .storeItem.on .storeName, .storeList .storeItem.on .storeBenefit{color: #fff;}
 
-.rouletterArea{position: relative;width: 400px;height: 400px;}
-.rouletterArea .rouletterImg{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);width: 350px;height: 350px;border-radius: 350px;overflow: hidden;}
+/* rouletter */
+.rouletterWrap{position: relative;padding: 44px 16px 38px;background-image: url(../images/bg_rouletter.jpg);background-repeat: repeat;background-position: top center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
+.rouletterWrap:before{content: "";display: block;position: absolute;top: 15px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #fff;border-radius: 15px;}
+.rouletterArea{position: relative;margin: 42px 0 133px;}
+.rouletterArea:before{content: "";position: absolute;bottom: -70px;left: 50%;transform: translate(-50%, 0);display: block;width: 290px;height: 105px;background-image: url(../images/img_rouletterEl_bottom.png);background-repeat: repeat;background-position: top center;z-index: 0;}
+.rouletterArea:after{content: "";position: absolute;top: 50%;left: 50%;width: 70px;height: 70px;margin-top: -35px;margin-left: -35px;border-radius: 100%;background: #fff;box-sizing: border-box;z-index: 1;}
+.rouletterArea .rouletterImg{position: relative;width: 295px;height: 289px;margin: 0 auto;border-radius: 100%;z-index: 1;}
 .rouletterArea .rouletterImg .rouletterEl{width: 100%;height: 100%;transition-timing-function: ease-in-out;transition: 2s;}
-.rouletterArea .rouletterPin{position: absolute;top: 0;left: 50%;transform: translateX(-50%);width: 1px;height: 1px;border-right: 10px solid transparent;border-left: 10px solid transparent;border-top: 40px solid red;border-bottom: 0px solid transparent;}
-.btnRouletter {position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);width: 80px;height: 80px;border-radius: 80px;background: #fff;border: 2px solid;}
+.rouletterArea .rouletterPin{position: absolute;top: -12px;left: 50%;transform: translateX(-50%);width: 34px;height: 46px;background-image: url(../images/icon_rouletterPin.png);background-repeat: no-repeat;z-index: 2;}
+.rouletterArea .btnRouletter{position: absolute;top: 50%;left: 50%;width: 64px;height: 64px;margin-top: -32px;margin-left: -32px;border-radius: 100%;background: #685DFF;border: 2px solid #383838;box-sizing: border-box;font-size: 16px;color: #fff;font-weight: 700;text-align: center;letter-spacing: -1px;z-index: 2;}
 .hiddenInput{display: none;}
+.rouletterInfo{position: relative;padding: 14px 10px 19px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
+.rouletterInfo ul{position: relative;display: flex;align-items: flex-start;justify-content: space-between;margin-top: 26px;border-top: 1px solid rgba(255, 255, 255, 0.3);border-bottom: 1px solid rgba(255, 255, 255, 0.3);box-sizing: border-box;}
+.rouletterInfo ul:before{content: "";position: absolute;top: 0;left: 33.3%;display: block;width: 1px;height: 100%;background-color: rgba(34, 34, 34, 0.1);border-radius: 30px;}
+.rouletterInfo ul:after{content: "";position: absolute;top: 0;left: 66.6%;display: block;width: 1px;height: 100%;background-color: rgba(34, 34, 34, 0.1);border-radius: 30px;}
+.rouletterInfo ul li{flex: 1;display: flex;justify-content: center;flex-direction: column;flex-wrap: wrap;margin: 10px 0 5px;padding: 0 5px;box-sizing: border-box;text-align: center;}
+.rouletterInfo ul li strong{margin-top: 9px;font-size: 15px;color: #222;font-weight: 700;line-height: 26px;letter-spacing: -0.6px;}
+.rouletterInfo ul li p{margin-top: 4px;font-size: 13px;color: #383838;font-weight: 400;line-height: 18px;letter-spacing: -0.6px;word-break: keep-all;}
+.rouletterSlideWrap{margin: 38px 0 0;}
+.rouletterSlideGroup{position: relative;max-width: 250px;margin: 23px auto 0;}
+.rouletterArrow .slick-arrow{position: absolute;top: 50%;width: 30px;height: 30px;margin-top: -15px;background-image: url(../images/icon_slide_arrow_purple.svg);background-color: #fff;background-position: center;background-repeat: no-repeat;border: 1px solid #685DFF;border-radius: 50%;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 1;}
+.rouletterArrow .prev{left: -15px;}
+.rouletterArrow .next{right: -15px;transform: rotate(180deg);}
+.rouletterSlide{width: 250px;height: 250px;min-width: auto;margin: 0 auto;background-color: #fff;border-radius: 50%;-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);overflow: hidden;}
+.rouletterSlide .slideItem {width: 250px;height: 250px;display: flex;align-items: center;justify-content: center;flex-direction: column;}
+.rouletterSlide .slideItem img{margin: 0 auto;}
+.rouletterSlide .slideItem p span{position: relative;padding: 0 5px;font-size: 18px;color: #000000;font-weight: 700;line-height: 22px;text-align: center;letter-spacing: -0.6px;}
+.rouletterSlide .slideItem p span:after{content: "";position: absolute;bottom: -1px;left: 0;display: block;width: 100%;height: 6px;background: rgba(104, 93, 255, 0.4);border-radius: 10px;box-sizing: border-box;}
 
+/* ticket */
+.ticketWrap{position: relative;padding: 40px 16px 53px;background-image: url(../images/bg_ticket.jpg);background-color: #feaadc;background-repeat: no-repeat;background-position: bottom center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
+.ticketWrap:before{content: "";display: block;position: absolute;top: 15px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #fff;border-radius: 15px;}
+.ticketInfo{position: relative;padding: 36px 10px 20px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
+.ticketInfo ul{position: relative;display: flex;align-items: flex-start;justify-content: space-between;margin-top: 26px;border-top: 1px solid rgba(255, 255, 255, 0.3);border-bottom: 1px solid rgba(255, 255, 255, 0.3);box-sizing: border-box;}
+.ticketInfo ul:before{content: "";position: absolute;top: 0;left: 33.3%;display: block;width: 1px;height: 100%;background-color: rgba(34, 34, 34, 0.1);border-radius: 30px;}
+.ticketInfo ul:after{content: "";position: absolute;top: 0;left: 66.6%;display: block;width: 1px;height: 100%;background-color: rgba(34, 34, 34, 0.1);border-radius: 30px;}
+.ticketInfo ul li{flex: 1;display: flex;justify-content: center;flex-direction: column;flex-wrap: wrap;margin: 10px 0 5px;padding: 0 5px;box-sizing: border-box;text-align: center;}
+.ticketInfo ul li strong{margin-top: 9px;font-size: 15px;color: #222;font-weight: 700;line-height: 26px;letter-spacing: -0.6px;}
+.ticketInfo ul li p{margin-top: 4px;font-size: 13px;color: #383838;font-weight: 400;line-height: 18px;letter-spacing: -0.6px;word-break: keep-all;}
+.ticketSlideWrap{margin-top: 40px;}
+.ticketSlide{width: 250px;height: 250px;min-width: auto;margin: 42px auto 64px !important;background-color: #fff;border-radius: 50%;-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);}
+.ticketSlide .slick-list{border-radius: 50% 28% 50% 50%;overflow: hidden;}
+.ticketSlide .slideItem {position: relative;width: 250px;height: 250px;display: flex;align-items: center;justify-content: center;flex-direction: column;transition: 1s;-webkit-transition: 1s;opacity: 0;}
+.ticketSlide .slideItem.slick-active {opacity: 1;}
+.ticketSlide .slideItem span{position: absolute;right: 15px;top: 15px;display: flex;justify-content: center;align-items: center;width: 40px;height: 40px;background: #63BDBD;border-radius: 50%;font-size: 14px;color: #FFFFFF;font-weight: 700;line-height: 22px;text-align: center;letter-spacing: -1px;}
+.ticketSlide .slideItem img{margin: 0 auto;}
+.ticketSlide .slideItem p{position: relative;font-size: 18px;color: #000;font-weight: 700;line-height: 22px;text-align: center;letter-spacing: -0.6px;}
+.ticketSlide .slick-dots{bottom: -64px;line-height: 0;}
+.ticketSlide .slick-dots li{width: 8px;height: 8px;margin: 0 3px;}
+.ticketSlide .slick-dots li button{width: 100%;height: 100%;padding: 0;background: #FFFFFF;border-radius: 5px;opacity: 0.8;}
+.ticketSlide .slick-dots li button:before{display: none;}
+.ticketSlide .slick-dots li.slick-active{width: 15px;}
+.ticketSlide .slick-dots li.slick-active button{background: #FF009B;opacity: 0.85;}
+
+/* stamp */
+.stampTopBack{position: fixed;width: 100%;height: 100%;top: 0;bottom: 0;left: 0;right: 0;z-index: 0;}
+.stampTopBack .stampCheckWrap{position: absolute;left: calc(50vw + 0px);top: 0;width: 100%;max-width: 390px;height: 320px;padding-top: 70px;background-image: url(../images/bg_stampCheck.jpg);background-size: cover;background-position: bottom center;background-repeat: no-repeat;box-sizing: border-box;}
+.stampTopBack + .stampFront{position: relative;margin-top: 250px;z-index: 1;}
+.stampCheckWrap .stampCheckInner{padding: 20px 20px;}
+.stampCheckWrap .title{margin-top: 29px;font-size: 18px;color: #fff;font-weight: 400;line-height: 24px;text-align: center;letter-spacing: -0.6px;}
+.stampCheckWrap .title b{font-size: 20px;color: #FF0097;font-weight: 800;}
+.stampCheckWrap .text{font-size: 13px;color: #fff;font-weight: 400;line-height: 18px;text-align: center;letter-spacing: -0.6px;}
+.stampCheckWrap .text b{font-weight: 700;}
+.stampCheckWrap .stampGroup{display: flex;justify-content: space-between;align-items: center;flex-direction: row;padding: 25px;box-sizing: border-box;}
+.stampCheckWrap .stampGroup button{position: relative;display: block;width: 70px;height: 70px;background-image: url(../images/img_stamp.svg);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
+.stampCheckWrap .stampGroup button.on{background-image: url(../images/img_stamp_on.svg);pointer-events: none;}
+
+.stampWrap{position: relative;padding: 95px 16px 54px;background-image: url(../images/bg_stampWrap.jpg);background-color: #F9E3F0;background-repeat: no-repeat;background-position: top center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
+.stampWrap:before{content: "";display: block;position: absolute;top: 24px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #FF8DD0;border-radius: 15px;}
+.stampInfo{position: relative;padding: 21px 0;margin-top: 271px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
+.stampInfo ul{position: relative;display: flex;align-items: flex-start;justify-content: space-between;box-sizing: border-box;}
+.stampInfo ul:before{content: "";position: absolute;top: 0;left: 50%;display: block;width: 1px;height: 100%;background-color: rgba(34, 34, 34, 0.1);border-radius: 30px;}
+.stampInfo ul li{flex: 1;display: flex;justify-content: center;flex-direction: column;flex-wrap: wrap;margin: 10px 0 5px;padding: 0 5px;box-sizing: border-box;text-align: center;}
+.stampInfo ul li strong{margin-top: 9px;font-size: 15px;color: #222;font-weight: 700;line-height: 26px;letter-spacing: -0.6px;}
+.stampInfo ul li p{margin-top: 4px;font-size: 13px;color: #222222;font-weight: 400;line-height: 18px;letter-spacing: -0.6px;word-break: keep-all;}
+.dotList{margin-top: 13px;}
+.dotList li{font-size: 13px;color: #777777;font-weight: 400;line-height: 21px;text-align: center;letter-spacing: -0.6px;}
+.dotList li:before{content: "";display: inline-block;width: 3px;height: 3px;margin-right: 6px;background: #777;border-radius: 50%;vertical-align: 2px;}
 
 @media screen and (max-width: 820px){
     .mapTopBack .mapWrap{left: 0;max-width: 100%;}
+    .stampTopBack .stampCheckWrap{left: 0;max-width: 100%;}
 }
 @media screen and (max-width: 375px){
 
@@ -89,22 +177,22 @@
 }
 
 @-webkit-keyframes myPositionOn {
-    from {background-color: rgba(255, 0, 151, 0.3); -webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
+    from {background-color: rgba(255, 0, 151, 0.3);-webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
     to {background-color: rgba(255, 0, 151, 0.1); -webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
 }
 @-moz-keyframes myPositionOn {
-    from {background-color: rgba(255, 0, 151, 0.3); -webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
+    from {background-color: rgba(255, 0, 151, 0.3);-webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
     to {background-color: rgba(255, 0, 151, 0.1); -webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
 }
 @-ms-keyframes myPositionOn {
-    from {background-color: rgba(255, 0, 151, 0.3); -webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
+    from {background-color: rgba(255, 0, 151, 0.3);-webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
     to {background-color: rgba(255, 0, 151, 0.1); -webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
 }
 @-o-keyframes myPositionOn {
-    from {background-color: rgba(255, 0, 151, 0.3); -webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
+    from {background-color: rgba(255, 0, 151, 0.3);-webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
     to {background-color: rgba(255, 0, 151, 0.1); -webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
 }
 @keyframes myPositionOn {
-    from {background-color: rgba(255, 0, 151, 0.3); -webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
-    to {background-color: rgba(255, 0, 151, 0.1); -webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
+    from {background-color: rgba(255, 0, 151, 0.3);-webkit-box-shadow: 0 0 0 0 #ff0097;box-shadow: 0 0 0 0 #ff0097;}
+    to {background-color: rgba(255, 0, 151, 0.1);-webkit-box-shadow:0 0 0 8px rgba(255, 0, 151, 0);box-shadow:0 0 0 8px rgba(255, 0, 151, 0);}
 }
