--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@
 .stampCheckWrap .stampGroup{display: flex;justify-content: space-between;align-items: center;flex-direction: row;padding: 25px;box-sizing: border-box;}
 .stampCheckWrap .stampGroup button{position: relative;display: block;width: 70px;height: 70px;background-image: url(../images/img_stamp.svg);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 .stampCheckWrap .stampGroup button.on{background-image: url(../images/img_stamp_on.svg);pointer-events: none;}
-.stampWrap{position: relative;padding: 95px 16px 54px;background-image: url(../images/bg_stampWrap.jpg);background-color: #F9E3F0;background-repeat: no-repeat;background-position: top center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
+.stampWrap{position: relative;padding: 95px 16px 54px;background-image: url(../images/bg_stampWrap.svg);background-color: #F9E3F0;background-repeat: no-repeat;background-position: top center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
 .stampWrap:before{content: "";display: block;position: absolute;top: 24px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #FF8DD0;border-radius: 15px;}
 .stampInfo{position: relative;padding: 21px 0;margin-top: 271px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
 .stampInfo ul{position: relative;display: flex;align-items: flex-start;justify-content: space-between;box-sizing: border-box;}
