--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,11 @@
 .rouletterWrap{position: relative;padding: 44px 16px 38px;background-image: url(../images/bg_rouletter.svg);background-repeat: repeat;background-position: top center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
 .rouletterWrap:before{content: "";display: block;position: absolute;top: 15px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #fff;border-radius: 15px;}
 .rouletterArea{position: relative;margin: 42px 0 133px;}
-.rouletterArea:before{content: "";position: absolute;bottom: -70px;left: 50%;transform: translate(-50%, 0);display: block;width: 290px;height: 105px;background-image: url(../images/img_rouletterEl_bottom.png);background-repeat: repeat;background-position: top center;z-index: 0;}
+.rouletterArea:before{content: "";position: absolute;bottom: -70px;left: 50%;transform: translate(-50%, 0);display: block;width: 290px;height: 105px;background-image: url(../images/img_rouletterEl_bottom.svg);background-repeat: repeat;background-position: top center;z-index: 0;}
 .rouletterArea:after{content: "";position: absolute;top: 50%;left: 50%;width: 70px;height: 70px;margin-top: -35px;margin-left: -35px;border-radius: 100%;background: #fff;box-sizing: border-box;z-index: 1;}
 .rouletterArea .rouletterImg{position: relative;width: 295px;height: 289px;margin: 0 auto;border-radius: 100%;z-index: 1;}
 .rouletterArea .rouletterImg .rouletterEl{width: 100%;height: 100%;transition-timing-function: ease-in-out;transition: 2s;}
-.rouletterArea .rouletterPin{position: absolute;top: -12px;left: 50%;transform: translateX(-50%);width: 34px;height: 46px;background-image: url(../images/icon_rouletterPin.png);background-repeat: no-repeat;z-index: 2;}
+.rouletterArea .rouletterPin{position: absolute;top: -12px;left: 50%;transform: translateX(-50%);width: 34px;height: 46px;background-image: url(../images/icon_rouletterPin.svg);background-repeat: no-repeat;z-index: 2;}
 .rouletterArea .btnRouletter{position: absolute;top: 50%;left: 50%;width: 64px;height: 64px;margin-top: -32px;margin-left: -32px;border-radius: 100%;background: #685DFF;border: 2px solid #383838;box-sizing: border-box;font-size: 16px;color: #fff;font-weight: 700;text-align: center;letter-spacing: -1px;z-index: 2;}
 .hiddenInput{display: none;}
 .rouletterInfo{position: relative;padding: 14px 10px 19px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
@@ -78,7 +78,7 @@
 
 
 /* ticket */
-.ticketWrap{position: relative;padding: 40px 16px 53px;background-image: url(../images/bg_ticket.jpg);background-color: #feaadc;background-repeat: no-repeat;background-position: bottom center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
+.ticketWrap{position: relative;padding: 40px 16px 53px;background-image: url(../images/bg_ticket.svg);background-color: #feaadc;background-repeat: no-repeat;background-position: bottom center;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;}
 .ticketWrap:before{content: "";display: block;position: absolute;top: 15px;left: 50%;transform: translate(-50%, 0%);width: 100px;height: 5px;background: #fff;border-radius: 15px;}
 .ticketInfo{position: relative;padding: 36px 10px 20px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
 .ticketInfo ul{position: relative;display: flex;align-items: flex-start;justify-content: space-between;margin-top: 26px;border-top: 1px solid rgba(255, 255, 255, 0.3);border-bottom: 1px solid rgba(255, 255, 255, 0.3);box-sizing: border-box;}
