--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@
 .rouletterArea:after{content: "";position: absolute;top: 50%;left: 50%;width: 70px;height: 70px;margin-top: -35px;margin-left: -35px;border-radius: 100%;background: #fff;box-sizing: border-box;z-index: 1;}
 .rouletterArea .rouletterImg{position: relative;width: 295px;height: 289px;margin: 0 auto;border-radius: 100%;z-index: 1;}
 .rouletterArea .rouletterImg .rouletterEl{width: 100%;height: 100%;transition-timing-function: ease-in-out;transition: 2s;}
-.rouletterArea .rouletterPin{position: absolute;top: -12px;left: 50%;transform: translateX(-50%);width: 34px;height: 46px;background-image: url(../images/icon_rouletterPin.svg);background-repeat: no-repeat;z-index: 2;}
+.rouletterArea .rouletterPin{position: absolute;top: -12px;left: 50%;transform: translateX(-50%);width: 34px;height: 46px;background-image: url(../images/icon_rouletterPin.png);background-repeat: no-repeat;z-index: 2;}
 .rouletterArea .btnRouletter{position: absolute;top: 50%;left: 50%;width: 64px;height: 64px;margin-top: -32px;margin-left: -32px;border-radius: 100%;background: #685DFF;border: 2px solid #383838;box-sizing: border-box;font-size: 16px;color: #fff;font-weight: 700;text-align: center;letter-spacing: -1px;z-index: 2;}
 .hiddenInput{display: none;}
 .rouletterInfo{position: relative;padding: 14px 10px 19px;background: #FFFFFF;border: 1px solid #000000;box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);border-radius: 10px;box-sizing: border-box;}
