--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -64,3 +64,12 @@
 .detailsType03 .detailsTitle:before{content: "";display: block;width: 20px;height: 1px;margin-bottom: 10px;background: #222;}
 .detailsType03 .detailsText{padding: 20px 16px 33px;font-size: 15px;color: #444;font-weight: 400;line-height: 24px;letter-spacing: -0.6px;word-break: keep-all;}
 .scrollLeft{display: flex;align-items: center;justify-content: flex-end;width: 200%;padding: 28px 0 43px;font-size: 70px;color: rgba(0, 0, 0, 0.1);font-weight: 700;line-height: 84px;text-align: center;letter-spacing: -0.6px;white-space: nowrap;}
+
+/* 쿠폰받기추가 start */
+.btnGetCoupon{opacity: 0;position: fixed;bottom: 0;left: 50vw;width: 100%;max-width: 390px;height: 60px;background-color: #252525;-webkit-backdrop-filter: blur(2px);backdrop-filter: blur(2px);font-size: 18px;color: #fff;font-weight: 700;line-height: 21px;letter-spacing: -0.8px;transition: 0.3s;-webkit-transition: 0.3s;pointer-events: none;z-index: 99;}
+.btnGetCoupon.show{opacity: 1;pointer-events: inherit;}
+.btnGetCoupon:hover, .btnGetCoupon:focus{background-color: #FF0097;}
+@media screen and (max-width: 820px){
+    .btnGetCoupon{left: 0;max-width: 100%;}
+}
+/* 쿠폰받기추가 end */
