--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,10 @@
 .stampWrap .titleLg:after{margin: 22px auto;}
 
 /* store */
-.storeList{position: relative;padding: 40px 16px 20px;background: #fff;-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;display: flex;flex-direction: row;flex-wrap: wrap;align-items: flex-start;justify-content: space-between;}
+.storeList{position: relative;padding: 40px 16px 20px;background: #fff;-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;display: flex;flex-direction: row;flex-wrap: wrap;align-items: flex-start;justify-content: space-between;min-height: calc(100vh - 603px);}
 .storeList:before{content: "";display: block;position: absolute;top: 15px;left: 50%; transform: translate(-50%, 0%);width: 100px;height: 5px;background: #E0E0E0;border-radius: 15px;}
 .storeList .storeItem{width: calc(50% - 5px);padding: 10px 12px 11px;margin-top: 10px;background: #fff;border: 1px solid #E1E1E1;-webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);border-radius: 10px;box-sizing: border-box;text-align: center;transition: .3s;-webkit-transition: .3s;}
+.storeList .loading{width: 100%;padding: 20px 0;box-sizing: border-box;text-align: center;}
 .storeList .storeItem:nth-child(2n+2){margin-left: 10px;}
 .storeList .storeItem:nth-child(-n+2){margin-top: 0;}
 .storeList .storeItem .storeThumb{position: relative;display: block;width: 100%;padding: 81.09% 0 0;}
